Inserting Images, embed, responsive, in css, in html. Stylelint rules,

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body class="container">
-    <root>
+    <app>
         <span class="loader">Loading...</span>
-    </root>
+    </app>
 </body>
 
 </html>
